Fixed full height on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -14,6 +14,10 @@
     box-sizing: border-box;
 }
 
+html, body, #app {
+    height: 100%
+}
+
 input:focus {
     outline: 0;
 }
